<resources>
    <string name="app_name">SGTI</string>
    <string name="action_settings">Desvincular dispositivo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_guardarHora">Guardar</string>
    <string name="action_listo">Listo</string>
    <string name="action_cancelarHora">Cancelar</string>

    <!-- Strings related to login -->
    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="titulo">Iniciar sesión</string>
    <string name="urlApp">Servidor</string>
    <string name="botonRegistro">Registrar este dispositivo</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="titulo_cargaHoras">Carga de horas</string>
    <string name="Desde">Desde</string>
    <string name="Hasta">Hasta</string>
    <string name="Contrato">Contrato</string>
    <string name="TipoHora">Tipo de hora</string>
    <string name="Actividad">Actividad</string>
    <string name="Descripcion">Descripción</string>
    <string name="Comentario">Comentario</string>

    <string name="Seleccionar">Seleccionar</string>
    <string name="SeleccionarContrato">Seleccione el contrato</string>
    <string name="HoraDefecto">--:--</string>
    <string name="MenuPrincipal">Menú principal</string>
</resources>
