<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".CargahoraAcitivy">

    <item android:id="@+id/mnuGuardarHora" android:title="@string/action_guardarHora"
        android:orderInCategory="1" app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_save"/>

    <item android:id="@+id/mnuListo" android:title="@string/action_listo"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" android:icon="@android:drawable/checkbox_on_background"/>

    <item android:id="@+id/mnuCancelarHora" android:title="@string/action_cancelarHora"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" android:icon="@android:drawable/ic_delete"/>
</menu>
