<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.itapua.app.sgti.CargahoraActivity"
    android:background="#cbcbcb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cargaHoras"
        android:id="@+id/titulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Desde"
        android:id="@+id/desde"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@+id/titulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seleccionar"
        android:id="@+id/fechaDesde"
        android:layout_below="@+id/desde"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hasta"
        android:id="@+id/hasta"
        android:textSize="20dp"
        android:layout_below="@+id/desde"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Seleccionar"
        android:id="@+id/fechaHasta"
        android:layout_below="@+id/hasta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HoraDefecto"
        android:id="@+id/horaDesde"
        android:layout_below="@+id/desde"
        android:layout_toRightOf="@+id/fechaDesde"
        android:layout_toEndOf="@+id/fechaDesde" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HoraDefecto"
        android:id="@+id/horaHasta"
        android:layout_alignTop="@+id/fechaHasta"
        android:layout_alignLeft="@+id/horaDesde"
        android:layout_alignStart="@+id/horaDesde" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TipoHora"
        android:id="@+id/tipoDeHora"
        android:textSize="20dp"
        android:layout_below="@+id/fechaHasta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cargando..."
        android:id="@+id/textViewContrato"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTipoHora"
        android:layout_below="@+id/tipoDeHora"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="20"
        android:id="@+id/textDescripcion"
        android:hint="Descripción"
        android:layout_below="@+id/spinnerActividades"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="20"
        android:id="@+id/textComentario"
        android:hint="Comentario"
        android:layout_below="@+id/textDescripcion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerActividades"
        android:layout_below="@+id/actividadTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Actividad"
        android:id="@+id/actividadTitulo"
        android:textSize="20dp"
        android:layout_below="@+id/spinnerTipoHora"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
